--- a/Backend/views/user/formpage.handlebars
+++ b/Backend/views/user/formpage.handlebars
@@ -4,15 +4,15 @@
     <div>
         <div>
             <label for="name">Name</label>
-                <input type="text" name="name"> <br>
+                <input type="text" name="name" required> <br>
             <label for="email">Email</label>
-                <input type="text" name="email" value="{{user.email}}" readonly aria-readonly="true"><br>
+                <input type="text" name="email" value="{{user.email}}" readonly aria-readonly="true" required><br>
             <label for="number">Number</label>
-                <input type="text" name="number" placeholder="+00 000 000"> <br><!-- With validation --> 
+                <input type="text" name="number" placeholder="+00 000 000" required> <br><!-- With validation --> 
             <label for="avaliation">Avaliation</label>
-                <input type="number" name="avaliation" max="5"> <br><!-- Values 1-5 in emojis or stars -->
+                <input type="number" name="avaliation" max="5" required> <br><!-- Values 1-5 in emojis or stars -->
             <label for="text">Text</label>
-                <textarea type="text" name="text"></textarea><br><!-- Values 1-5 in emojis or stars -->
+                <textarea type="text" name="text"></textarea required><br><!-- Values 1-5 in emojis or stars -->
             <button type="submit">Send Feedback</button>
         </div>
 
