Config: Adding bootstrap config

--- a/Backend/views/admin/loginform.handlebars
+++ b/Backend/views/admin/loginform.handlebars
@@ -2,10 +2,10 @@
     <h1>Login Form</h1>
     <div>
         <form action="/admin/login/auth" method="post">
-            <label for="name">Name</label>
-                <input type="text" name="name">
+            <label for="name">Email</label>
+                <input type="email" name="email">
             <label for="name">password</label>
-                <input type="text" name="password">
+                <input type="password" name="password">
             <div>
                 <button type="submit">Confirm</button>
             </div>
