--- a/Backend/views/admin/loginform.handlebars
+++ b/Backend/views/admin/loginform.handlebars
@@ -1,14 +1,14 @@
-<div class="center-screen">
-    <h1>Login Form</h1>
-    <div>
-        <form action="/admin/login/auth" method="post">
-            <label for="name">Email</label>
-                <input type="email" name="email">
-            <label for="name">password</label>
-                <input type="password" name="password">
-            <div>
-                <button type="submit">Confirm</button>
-            </div>
-        </form>
-    </div>
-</div>
+ <body class="text-center">
+    <form class="form-signin" method="post" action="/admin/login/auth">
+      <img class="mb-4" src="https://media.licdn.com/dms/image/D560BAQE-smAPKzvVOA/company-logo_200_200/0/1706201774771/zidio_development_logo?e=2147483647&v=beta&t=sTymURyR1V7fTT9gypeW8NjwZeLfNqfbWPXI0OW64Jg" alt="" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+        <div style="width: 50vw; margin: auto;">
+            <label for="email" class="sr-only">E-mail</label>
+            <input type="email" class="form-control mt-4" name="email" placeholder="Example@example.com" required autofocus>
+            
+            <label for="password" class="sr-only">Password</label>
+            <input type="password" name="password" class="form-control mt-4" placeholder="Your password" required>
+            <button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Login</button>
+        </div>
+    </form>
+  </body>
