--- a/Backend/views/admin/analysis.handlebars
+++ b/Backend/views/admin/analysis.handlebars
@@ -1,24 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Admin</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mr-auto"> <!-- Adiciona margem à direita -->
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(Página atual)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/admin/analysis/">Analysis</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav ml-auto"> <!-- Adiciona margem à esquerda -->
-      <li class="nav-item">
-        <a class="nav-link" href="#">Config</a>
-      </li>
-    </ul>
-  </div>
+<ul class="nav nav-pills">
+  <li class="nav-item">
+    <a class="nav-link" style="width=72" href="/admin/initialpage/{{hashcode}}">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" href="/admin/analysis/{{hashcode}}">Analysis</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/admin/settings/{{hashcode}}">Settings</a>
+  </li>
+</ul>
 </nav>
+<h1>Feedbacks</h1>
 
 
 
@@ -26,37 +19,37 @@
 <h2>Avaliations</h2>
 <hr>
 <div class="d-flex justify-content-between flex-fill">
-  <div class="card flex-fill border-dark mb-3 ml-5" style="max-width: 18rem;  width: 8rem">
+  <div class="card text-white flex-fill bg-primary mb-3 ml-5" style="max-width: 18rem;  width: 8rem">
     <div class="card-header">Very Bad</div>
-    <div class="card-body text-dark">
+    <div class="card-body">
       <h5 class="card-title">{{aval1}}</h5>
     </div>
   </div>
 
-  <div class="card flex-fill border-dark mb-3" style="max-width: 18rem; width: 8rem">
+  <div class="card text-white flex-fill bg-primary mb-3" style="max-width: 18rem; width: 8rem">
     <div class="card-header">Bad</div>
-    <div class="card-body text-dark">
+    <div class="card-body">
       <h5 class="card-title">{{aval2}}</h5>
     </div>
   </div>
 
-  <div class="card flex-fill border-dark mb-3" style="max-width: 18rem;  width: 8rem">
+  <div class="card text-white flex-fill bg-primary mb-3" style="max-width: 18rem;  width: 8rem">
     <div class="card-header">Neutral</div>
-    <div class="card-body text-dark">
+    <div class="card-body">
       <h5 class="card-title">{{aval3}}</h5>
     </div>
   </div>
 
-  <div class="card flex-fill border-dark mb-3" style="max-width: 18rem; width: 8rem">
+  <div class="card text-white flex-fill bg-primary mb-3" style="max-width: 18rem; width: 8rem">
     <div class="card-header">Good</div>
-    <div class="card-body text-dark">
+    <div class="card-body">
       <h5 class="card-title">{{aval4}}</h5>
     </div>
   </div>
 
-  <div class="card flex-fill border-dark mb-3 mr-5" style="max-width: 18rem; width: 8rem">
+  <div class="card text-white flex-fill bg-primary mb-3 mr-5" style="max-width: 18rem; width: 8rem">
     <div class="card-header">Very Good</div>
-    <div class="card-body text-dark">
+    <div class="card-body">
       <h5 class="card-title">{{aval5}}</h5>
     </div>
   </div>
@@ -65,37 +58,37 @@
 <h2>Percentages</h2>
 <hr>
 <div class="d-flex justify-content-between flex-fill">
-  <div class="card flex-fill border-dark mb-3 ml-5" style="max-width: 18rem;  width: 8rem">
+  <div class="card text-white flex-fill bg-primary mb-3 ml-5" style="max-width: 18rem;  width: 8rem">
     <div class="card-header">Very Bad</div>
-    <div class="card-body text-dark">
+    <div class="card-body">
       <h5 class="card-title">{{percentage1}}%</h5>
     </div>
   </div>
 
-  <div class="card flex-fill border-dark mb-3" style="max-width: 18rem; width: 8rem">
+  <div class="card text-white flex-fill bg-primary mb-3" style="max-width: 18rem; width: 8rem">
     <div class="card-header">Bad</div>
-    <div class="card-body text-dark">
+    <div class="card-body">
       <h5 class="card-title">{{percentage2}}%</h5>
     </div>
   </div>
 
-  <div class="card flex-fill border-dark mb-3" style="max-width: 18rem;  width: 8rem">
+  <div class="card text-white flex-fill bg-primary mb-3" style="max-width: 18rem;  width: 8rem">
     <div class="card-header">Neutral</div>
-    <div class="card-body text-dark">
+    <div class="card-body">
       <h5 class="card-title">{{percentage3}}%</h5>
     </div>
   </div>
 
-  <div class="card flex-fill border-dark mb-3" style="max-width: 18rem; width: 8rem">
+  <div class="card text-white flex-fill bg-primary mb-3" style="max-width: 18rem; width: 8rem">
     <div class="card-header">Good</div>
-    <div class="card-body text-dark">
+    <div class="card-body">
       <h5 class="card-title">{{percentage4}}%</h5>
     </div>
   </div>
 
-  <div class="card flex-fill border-dark mb-3 mr-5" style="max-width: 18rem; width: 8rem">
+  <div class="card text-white flex-fill bg-primary mb-3 mr-5" style="max-width: 18rem; width: 8rem">
     <div class="card-header">Very Good</div>
-    <div class="card-body text-dark">
+    <div class="card-body">
       <h5 class="card-title">{{percentage5}}%</h5>
     </div>
   </div>
