--- a/Backend/views/admin/initialpage.handlebars
+++ b/Backend/views/admin/initialpage.handlebars
@@ -1,26 +1,17 @@
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Admin</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mr-auto"> <!-- Adiciona margem à direita -->
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(Página atual)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/admin/analysis/">Analysis</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav ml-auto"> <!-- Adiciona margem à esquerda -->
-      <li class="nav-item">
-        <a class="nav-link" href="#">Config</a>
-      </li>
-    </ul>
-  </div>
+<ul class="nav nav-pills">
+  <li class="nav-item">
+    <a class="nav-link active" style="width=72" href="/admin/initialpage/{{hashcode}}">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/admin/analysis/{{hashcode}}">Analysis</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/admin/settings/{{hashcode}}">Settings</a>
+  </li>
+</ul>
 </nav>
-
-
 <h1>Feedbacks</h1>
 
 
