Feat: Adding company config page

--- a/Backend/views/admin/loginform.handlebars
+++ b/Backend/views/admin/loginform.handlebars
@@ -1,6 +1,6 @@
  <body class="text-center">
     <form class="form-signin" method="post" action="/admin/login/auth">
-      <img class="mb-4" src="https://media.licdn.com/dms/image/D560BAQE-smAPKzvVOA/company-logo_200_200/0/1706201774771/zidio_development_logo?e=2147483647&v=beta&t=sTymURyR1V7fTT9gypeW8NjwZeLfNqfbWPXI0OW64Jg" alt="" width="72" height="72">
+      <img class="mb-4" src="{{client.logo}}" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Login</h1>
         <div style="width: 50vw; margin: auto;">
             <label for="email" class="sr-only">E-mail</label>
