--- a/Backend/views/index.handlebars
+++ b/Backend/views/index.handlebars
@@ -1,6 +1,11 @@
-<h1>Initial page</h1>
+<div class="container">
+    <div class="jumbotron">
+        <h1 class="display-4">{{client.name}}</h1>
+        <p class="lead">Send feedbacks about your experience to help improve our services</p>
+        <hr class="my-4">
+        <p>Choose an option below:</p>
+        <a class="btn btn-primary btn-lg mr-2" href="user/register" role="button">Register</a>
+        <a class="btn btn-success btn-lg" href="user/login" role="button">Login</a>
+    </div>
+</div>
 
-
-<a href="user/register"><button>Register</button></a>
-
-<a href="user/login"><button>Login</button></a>
