--- a/Backend/views/user/registerform.handlebars
+++ b/Backend/views/user/registerform.handlebars
@@ -1,12 +1,27 @@
-<form action="/user/register" method="post">
-    <label for="name">Name:</label>
-        <input type="text" name="name" required>
-    <br>
-    <label for="email">E-mail:</label>
-        <input type="email" name="email" required>
-    <br>
-    <label for="password">Password:</label>
-        <input type="password" name="password">
-    <br>
-    <button type="submit">Register</button>
-</form>
+<div class="container">
+    <div class="card">
+        <div class="card-header">
+            <h1 class="text-center">Create an account</h1>
+        </div>
+        <div class="card-body">
+            <form action="/user/register" method="post">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" name="name" required autofocus class="form-control">
+                </div>
+                <div class="form-group">
+                        <label for="email">E-mail:</label>
+                        <input type="email" name="email"  class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" name="password" class="form-control" required>
+                </div>
+                
+
+                <button type="submit" class="btn btn-block btn-success">Confirm</button>
+                <a href="/" class="btn btn-block btn-danger">Cancel</a>
+            </form>
+        </div>
+    </div>
+</div>
